--- a/docs/guide/GB28181.md
+++ b/docs/guide/GB28181.md
@@ -1,2 +1,20 @@
-# 前置知识
+# 国标GB28181协议
+[GB28181](http://c.gb688.cn/bzgk/gb/showGb?type=online&hcno=8BBC2475624A6C31DC34A28052B3923D)是一项国家标准，全称为《公共安全视频监控联网系统信息传输、交换、控制技术要求》。
+这项标准主要规定了视频监控系统的互联结构,传输、交换、控制的基
+本要求和安全性要求,以及控制、传输流程和协议接口等技术要求。
 
+## 主要组成
+1. **系统组成**：监控中心、传输设备、编码设备、解码设备等。
+2. **信息传输**：实时视频、历史视频、报警信息等。
+3. **信息交换**：设备控制、设备状态查询、设备配置等。
+4. **信息控制**：设备控制、设备状态查询、设备配置等。
+
+## 关键部分
+
+1. **设备编码**：每个设备的唯一标识。由14位的行政区划代码和后续编号组成，用于唯一标识一个设备。
+2. **信令传输**：使用**SIP**（Session Initiation Protocol，会话初始协议）进行信令传输。SIP是一个基于文本的协议，用于创建、修改和终止包括视频、音频和消息在内的会话。
+3. **媒体传输**： 使用**RTP**（Real-time Transport Protocol，实时传输协议）进行媒体传输，如音频和视频。
+4. **设备控制**： 使用**CSTA**（Computer Supported Telecommunications Applications，计算机支持的电信应用）进行设备控制。CSTA是一种基于XML的协议，用于描述设备的状态和控制设备的操作。
+
+
+[更多资料](../data/README.md)
